--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,8 +31,23 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+      - name: Debug environment
+        run: |
+          echo "PAGE_URL=$PAGE_URL"
+          echo "WORDPRESS_API_URL=$WORDPRESS_API_URL"
+          echo "WORKFLOW_BUILD=$WORKFLOW_BUILD"
+        env:
+          PAGE_URL: ${{ secrets.PAGE_URL }}
+          WORDPRESS_API_URL: ${{ secrets.WORDPRESS_API_URL }}
+          WORKFLOW_BUILD: "true"
       - name: Build and Export Next.js
         run: npm run build
+        env:
+          PAGE_URL: ${{ secrets.PAGE_URL }}
+          WORDPRESS_API_URL: ${{ secrets.WORDPRESS_API_URL }}
+          WORKFLOW_BUILD: "true"
+          NEXT_PUBLIC_GOOGLE_MAPS_API_KEY: ${{ secrets.NEXT_PUBLIC_GOOGLE_MAPS_API_KEY }}
+          NEXT_PUBLIC_CMS_MODE: "static"
 
       # - name: Upload artifact
       #   uses: actions/upload-pages-artifact@v3
