--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,7 +3,7 @@ name: Build and Deploy Next.js to GitHub Pages
 on:
   push:
     branches:
-      - main  # oder der Branch, von dem du deployen möchtest
+      - main
   workflow_dispatch:
 
 permissions:
@@ -18,6 +18,7 @@ concurrency:
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -26,20 +27,22 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 22
-          cache: 'npm'
+          cache: npm
+
       - name: Install dependencies
         run: npm ci
+
       - name: Build and Export Next.js
         run: npm run build
         env:
-          PAGE_URL: ${{ secrets.PAGE_URL }}
+          PAGE_URL: https://${{ github.repository_owner }}.github.io/${{ github.event.repository.name }}/
           WORDPRESS_API_URL: ${{ secrets.WORDPRESS_API_URL }}
           WORKFLOW_BUILD: "true"
           NEXT_PUBLIC_GOOGLE_MAPS_API_KEY: ${{ secrets.NEXT_PUBLIC_GOOGLE_MAPS_API_KEY }}
           NEXT_PUBLIC_CMS_MODE: "static"
 
-      - name: list output
-        run: ls -all out/
+      - name: List output
+        run: ls -al out/
 
       - name: Archive static export
         run: |
@@ -47,9 +50,28 @@ jobs:
           zip -r ../next-export.zip .
           cd ..
 
-      # 📦 Bereitstellen als GitHub-Artefakt
       - name: Upload build artifact
         uses: actions/upload-artifact@v4
         with:
           name: next-export
           path: next-export.zip
+
+      - name: Upload artifact for GitHub Pages
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: ./out
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
+
+      - name: Print deployment URL
+        run: echo "✅ Deployed to ${{ steps.deployment.outputs.page_url }}"
