--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"@types/react-dom": "^19",
 		"@vitest/browser": "^3.2.4",
 		"@vitest/coverage-v8": "^3.2.4",
+		"autoprefixer": "^10.4.21",
 		"critters": "^0.0.23",
 		"eslint": "^9",
 		"eslint-config-next": "15.5.5",
