--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,5 +23,11 @@
 		"target": "ES2018"
 	},
 	"exclude": ["node_modules"],
-	"include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "env.d.ts"]
+	"include": [
+		"next-env.d.ts",
+		"**/*.ts",
+		"**/*.tsx",
+		".next/types/**/*.ts",
+		"env.d.ts"
+	]
 }
