fixed robots.txt copy

--- a/package.json
+++ b/package.json
@@ -49,14 +49,14 @@
 		"build-storybook": "storybook build",
 		"clean:next": "ts-node --prefer-ts-exts --project ./scripts/tsconfig.json scripts/actions/clean-next-cache.ts",
 		"cms:download": "ts-node --prefer-ts-exts --project ./scripts/tsconfig.json scripts/actions/download-cms-assets.ts",
-		"copy-sitemap": "ts-node --prefer-ts-exts --project ./scripts/tsconfig.json scripts/postBuild/copy-sitemap.ts",
 		"dev": "next dev --turbopack",
 		"lint": "eslint",
 		"lint:fix": "eslint --fix",
 		"postbuild": "npm run postbuild:copy-server-config && npm run postbuild:critical-css-script && npm run postbuild:sitemap",
 		"postbuild:copy-server-config": "ts-node --prefer-ts-exts --project ./scripts/tsconfig.json scripts/postBuild/copy-server-config.ts",
 		"postbuild:critical-css-script": "ts-node --prefer-ts-exts --project ./scripts/tsconfig.json scripts/postBuild/critical-css-script.ts",
-		"postbuild:sitemap": "npx next-sitemap && npm run copy-sitemap",
+		"postbuild:sitemap": "npx next-sitemap && npm run postbuild:sitemap:copy-sitemap",
+		"postbuild:sitemap:copy-sitemap": "ts-node --prefer-ts-exts --project ./scripts/tsconfig.json scripts/postBuild/copy-sitemap.ts",
 		"prebuild": "npm run prebuild:clean",
 		"prebuild:clean": "npm run clean:next",
 		"run-live": "npx serve@latest out",
